--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "echarts": "^5.4.2",
     "element-plus": "^2.3.3",
     "jquery": "^3.7.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^8.0.0",
     "scss": "^0.2.4",
     "swiper": "^9.3.2",
